
* Make Element._attributeTranslations.read.values._getEv use Function.prototype.toString and return value only if wrapped in an anonymous function. [#184 state:resolved] [Garrett Smith, jddalton]

* Remove the use of indexOf in Emumerable#include because Array#indexOf uses strict strict equality. [#183 state:resolved] [Garrett Smith, jjdalton]

* Changed misleading variable name "index" to "value" in Form.Element.Serializers.select(). [#180 state:resolved] [jjdalton]

* Fix Prototype.Browser.Opera sniff and remove use of window.opera. [#176 state:resolved] [Tobie Langel]

* Fix document.viewport.getDimensions() Opera version detect on Mac with parseFloat. [#163 state:resolved] [Sam Holman]

* Fix Element cumulativeOffset, getDimensions, getOffsetParent, and clonePosition not working as expected. [#162 state:resolved] [jddalton, Nick Stakenburg]

* Replace browser sniffing with capability detection in IE fork of String#unescapeHTML. [kangax]

* Fix for IE7 to access local files via Ajax.Request. Closes #8259. [hagen.seifert, jddalton]

* Ensure CSS files have loaded before firing the dom:loaded event. [Diego Perini, jddalton]

* Allow Form#request to pass the "submit" option to Form#serialize. [#66 state:resolved] [Ben Sommerville, jddalton, jodosha]

* Ensure Element#readAttribute works properly when accessing the "type" attribute of an IFRAME. [#118 state:resolved] [Zekid, kangax]

* Ensure Object.isElement and Object.isHash handle "falsy" values properly. [jddalton, kangax]

* Fix exiting test task on INT signal. [Samuel Lebeau]

* Ensure deprecated Position object methods use Element#getDimensions. [jddalton]

* Correct Element#cumulativeScrollOffset for IE, Safari, and Opera < 9.5.  [jddalton]

* Make Form#serializeElements more closely follow the W3C specifications. [#85 state:resolved] [jddalton]

* Make Element#viewportOffset return correct values for "fixed" positioned elements. Closes #10869. [kangax, watersco]
